# fine_tuning

./: .gitignore  README.md  load_data.ipynb
MINI_SYNTHSEG_LSPINE/: MINI_SYNTHSEG_LSPINE_INTERVIEW_TASK.md  pyproject.toml
MINI_SYNTHSEG_LSPINE/models/: nxt_unet.ipynb
MINI_SYNTHSEG_LSPINE/submit/: ANALYSIS_REPORT.md  synthetic_generator.py  train.py
MINI_SYNTHSEG_LSPINE/submit/notebooks/: eval.ipynb  generator.ipynb  train.ipynb
MINI_SYNTHSEG_LSPINE/synthseg_spine_assignment/: ANALYSIS_REPORT.md  README.md  evaluate.py  evaluation_result.txt  example.py  requirements.txt  synthetic_generator.py  train.py
MINI_SYNTHSEG_LSPINE/synthseg_spine_assignment/extraction_files/: eval_extraction.py  train_extraction.py
MINI_SYNTHSEG_LSPINE/synthseg_spine_assignment/models/: unet.py
