[project]
name = "mini-synthseg-lspine"
version = "0.1.0"
description = "Mini-SynthSeg for Lumbar Spine Segmentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "nibabel>=5.3.2",
    "numpy>=2.3.5",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
